transaktsioonid valmis koos dokumentatsiooniga
